--- a/restaurant.html
+++ b/restaurant.html
@@ -19,7 +19,7 @@
     </nav>
     <!-- Beginning breadcrumb -->
     <nav>
-      <ul id="breadcrumb" aria-label="homepage-navigation=">
+      <ul id="breadcrumb" aria-label="homepage-navigation">
         <li><a href="/">Home</a></li>
       </ul>
     </nav>
