--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <div class="filter-options" aria-label="Filter results">
         <h2 id="filter">Filter Results</h2>
         <div class="filter-selects">
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" name="neighborhoods" aria-label="neighborhoods-select" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" name="cuisines" aria-label="cuisines-select" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
         </div>
