--- a/restaurant.html
+++ b/restaurant.html
@@ -19,7 +19,7 @@
     </nav>
     <!-- Beginning breadcrumb -->
     <nav>
-      <ul id="breadcrumb" aria-label="homepage-navigation">
+      <ul id="breadcrumb" aria-label="global navigation">
         <li><a href="/">Home</a></li>
       </ul>
     </nav>
@@ -31,7 +31,7 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container" aria-label="Map of restaurants" role="application">
+    <section id="map-container" aria-label="Map of restaurant" role="application">
       <div id="map"></div>
     </section>
     <!-- End map -->
